Version sin torres extras